--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,32 @@
       });
     });
   </script>
+
+<script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-auth.js"></script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBlUkYyKAE5e4cSzEKOfvqCQ-7qkeq7fvE",
+    authDomain: "crabcheck-c8aea.firebaseapp.com",
+    projectId: "crabcheck-c8aea",
+    storageBucket: "crabcheck-c8aea.appspot.com",
+    messagingSenderId: "819593173831",
+    appId: "1:819593173831:web:95d808519e9ec6e1514a62",
+    measurementId: "G-T0JLWL3VV2"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
 </body>
 </html>
